modules/grammars/tool/src/test/resources/cocos/valid/ValidAttribute.td
package valid;

tool ValidAttribute {
    attribute path = "some/awesome/path";

    resource SOME_RESOURCE {
        attribute path = "some/other/awesome/path";
    }
}
